[package]
name = "p2panda-next-test"
version = "0.1.0"
edition = "2024"

[dependencies]
p2panda-net = { git = "https://github.com/p2panda/p2panda", branch = "net-rewrite", package = "p2panda-net-next"}
p2panda-core = { git = "https://github.com/p2panda/p2panda", branch = "net-rewrite"}
p2panda-store = { git = "https://github.com/p2panda/p2panda", branch = "net-rewrite"}
p2panda-discovery = { git = "https://github.com/p2panda/p2panda", branch = "net-rewrite", package = "p2panda-discovery-next"}
p2panda-sync = { git = "https://github.com/p2panda/p2panda", branch = "net-rewrite", package = "p2panda-sync-next"}
iroh = "0.95.1"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
serde = "1.0.228"
tokio = "1.48.0"
hex = "0.4.3"
thiserror = "2.0.17"
